<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search">Išči</string>
    <string name="use_location">Uporabi lokacijo</string>
    <string name="search_text">Vnesite mesto ali uporabite lokacijo</string>
    <string name="search_hint">Primer: Ljubljana…</string>
    <string name="title">Ali bo dež</string>
    <string name="city_empty">Mesto ne sme biti prazno!</string>
    <string name="city_not_found">Mesto ni bilo najdeno.</string>
    <string name="current_weather">TRENUTNA NAPOVED</string>
    <string name="feels_like">Čuti se kot</string>
    <string name="cloudiness">Oblačnost</string>
    <string name="humidity">Vlažnost</string>
    <string name="wind">Veter</string>
    <string name="weekly_forecast">TEDENSKA NAPOVED</string>
    <string name="unsuccessful">Mesto ni bilo najdeno.</string>
    <string name="alerts">Obvestila</string>
    <string name="turn_off">Ugasni</string>
    <string name="turn_on">Vklopi</string>
    <string name="add_alert">Dodaj obvestilo</string>
    <string name="set_alert_time">Nastavi čas</string>
    <string name="set_alert_date">Nastavi datum</string>
    <string name="select_time">Izberite čas</string>
    <string name="select_date">Izberite datum</string>
    <string name="select_city">Izberite mesto</string>
    <string name="optional">Neobvezno</string>
    <string name="daily_alerts">Dnevna opozorila</string>
    <string name="set_time_date">Nastavite čas in datum.</string>
    <string name="location_denied">Dostop do lokacije je bil zavrnjen.</string>
    <string name="weather_for">Vremenska napoved za</string>
    <string name="precipitation">Padavine</string>
    <string name="precipitation_unit">mm</string>
    <string name="uvi_index">UVI indeks</string>
    <string name="visibility">Vidljivost</string>
    <string name="pressure">Tlak</string>
    <string name="hourly_forecast">NAPOVED PO URAH</string>
    <string name="repeat">Ponavljaj</string>
    <string name="once">Enkrat</string>
    <string name="daily">Vsak dan</string>
    <string name="custom">Po meri</string>
    <string name="using_location">Uporabljena bo vaša lokacija</string>
    <string name="less_than_min">Alarm čez manj kot minuto</string>
    <string name="unknown">Neznano</string>
    <string name="notification_channel">Ali bo dez notification channel</string>
    <string name="channel_description">Notifikacije za vremensko napoved</string>
    <string name="channel_id">weatherReport</string>
    <string name="fast_forecast">Hitra napoved</string>
    <string name="forecast_paused">Hitra napoved je na eno minutni pavzi!</string>
    <string name="notification">Obvestilo</string>
    <string name="rain_prob">Verjetnost dežja</string>
    <string name="sunset">Sončni zahod</string>
    <string name="sunrise">Sončni vzhod</string>
    <string name="fast_forecast_text">Hitra napoved</string>
    <string name="close">Zapri</string>
</resources>