<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_alert_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:paddingVertical="20dp"
        android:text="@string/add_alert"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/veryDarkBlue"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/set_alert_time"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/add_alert_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darkGrey"
        android:text="@string/set_alert_time"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/set_alert_date"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@id/set_alert_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/darkGrey"
        android:text="@string/set_alert_date"
        android:textSize="25sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/cancel_alert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/set_alert_date"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_cross"
        app:backgroundTint="@null"
        app:drawableTint="@color/veryDarkBlue" />

    <Button
        android:id="@+id/save_alert"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/set_alert_date"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/ic_tick"
        android:backgroundTint="@color/veryDarkBlue"
        app:backgroundTint="@null"
        app:drawableTint="@color/veryDarkBlue" />
</RelativeLayout>